[gd_scene load_steps=7 format=3 uid="uid://dhjl4ne7kf1gk"]

[ext_resource type="Script" path="res://wheel_part.gd" id="1_rc5js"]
[ext_resource type="PackedScene" uid="uid://cww4rrqoq5fmb" path="res://arrow.tscn" id="2_5re37"]

[sub_resource type="BoxShape3D" id="BoxShape3D_lj6dk"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_f3u0c"]
albedo_color = Color(0.344076, 0.344076, 0.344076, 1)
metallic = 0.99
roughness = 0.5

[sub_resource type="BoxMesh" id="BoxMesh_b3fel"]
material = SubResource("StandardMaterial3D_f3u0c")

[sub_resource type="CylinderMesh" id="CylinderMesh_cl5m4"]
height = 0.05

[node name="WheelPart" type="Node3D"]
script = ExtResource("1_rc5js")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_lj6dk")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_b3fel")

[node name="Wheel" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Wheel"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_cl5m4")
skeleton = NodePath("")

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)

[node name="DebugArrowX" parent="." instance=ExtResource("2_5re37")]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0.25, 0)
visible = false
color = Color(1, 0, 0, 1)

[node name="DebugArrowY" parent="." instance=ExtResource("2_5re37")]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0.25, 0)
visible = false
color = Color(0, 1, 0, 1)

[node name="DebugArrowZ" parent="." instance=ExtResource("2_5re37")]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0.25, 0)
visible = false
color = Color(0, 0, 1, 1)
